[gd_scene load_steps=16 format=3 uid="uid://bs2uiqhymtxje"]

[ext_resource type="Script" path="res://scenes/home.gd" id="1_oxc1a"]
[ext_resource type="PackedScene" uid="uid://cr5dhnxd75opn" path="res://scenes/Player.tscn" id="1_u38l8"]
[ext_resource type="Texture2D" uid="uid://crb8vmnobvnb" path="res://assests/floorfuckyousidd.png" id="2_5t0r4"]
[ext_resource type="PackedScene" uid="uid://cmfermkd672ns" path="res://scenes/pickup.tscn" id="2_m6omq"]
[ext_resource type="Texture2D" uid="uid://dx331pn7yr4yf" path="res://assests/wall_tilemap.png" id="3_2t4ut"]
[ext_resource type="PackedScene" uid="uid://cm8s01lb5q6hf" path="res://scenes/enemy.tscn" id="3_7604f"]
[ext_resource type="Texture2D" uid="uid://ba7iuf7wwppnd" path="res://assests/mossy_steps.png" id="4_rag3x"]
[ext_resource type="AudioStream" uid="uid://djfq808smr5ou" path="res://assests/audio/Theme1Demo.mp3" id="8_e2cug"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vy42m"]
texture = ExtResource("2_5t0r4")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_i7588"]
tile_size = Vector2i(32, 32)
sources/2 = SubResource("TileSetAtlasSource_vy42m")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u2h3l"]
texture = ExtResource("3_2t4ut")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, -16, -16, -16, 16, 16, 16)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_2igs3"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/1 = SubResource("TileSetAtlasSource_u2h3l")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tahjg"]
texture = ExtResource("4_rag3x")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_l28v6"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_tahjg")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_umb4c"]
size = Vector2(31, 33)

[node name="Home" type="Node2D"]
script = ExtResource("1_oxc1a")
level_start = Vector2(-261, 145)

[node name="Background" type="TileMap" parent="."]
position = Vector2(45, -32)
tile_set = SubResource("TileSet_i7588")
format = 2
layer_0/tile_data = PackedInt32Array(393204, 2, 0, 393205, 2, 0, 393206, 2, 0, 393207, 2, 0, 393208, 2, 0, 393209, 2, 0, 393210, 2, 0, 393211, 2, 0, 393212, 2, 0, 393213, 2, 0, 393214, 2, 0, 393215, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 393224, 2, 0, 393223, 2, 0, 393222, 2, 0, 393221, 2, 0, 393220, 2, 0, 393219, 2, 0, 393218, 2, 0, 393217, 2, 0, 393216, 2, 0, 458751, 2, 0, 458750, 2, 0, 458749, 2, 0, 458748, 2, 0, 458747, 2, 0, 458746, 2, 0, 458745, 2, 0, 458744, 2, 0, 458743, 2, 0, 458742, 2, 0, 458741, 2, 0, 458740, 2, 0, 327668, 2, 0, 262132, 2, 0, 196596, 2, 0, 131060, 2, 0, 65524, 2, 0, -12, 2, 0, -65548, 2, 0, -262156, 2, 0, -196620, 2, 0, -131084, 2, 0, -262155, 2, 0, -262154, 2, 0, -262153, 2, 0, -262152, 2, 0, -262151, 2, 0, -262150, 2, 0, -262149, 2, 0, -262148, 2, 0, -262147, 2, 0, -262146, 2, 0, -262145, 2, 0, -327680, 2, 0, -327679, 2, 0, -327678, 2, 0, -327677, 2, 0, -327676, 2, 0, -327675, 2, 0, -327674, 2, 0, -327673, 2, 0, -327672, 2, 0, -262136, 2, 0, -196600, 2, 0, -131064, 2, 0, -65528, 2, 0, 8, 2, 0, 65544, 2, 0, 131080, 2, 0, 196616, 2, 0, 262152, 2, 0, 262151, 2, 0, 262150, 2, 0, 262149, 2, 0, 262148, 2, 0, 262147, 2, 0, 262146, 2, 0, 262145, 2, 0, 262144, 2, 0, 327679, 2, 0, 327678, 2, 0, 327677, 2, 0, 327676, 2, 0, 327675, 2, 0, 327674, 2, 0, 327673, 2, 0, 327672, 2, 0, 327671, 2, 0, 327670, 2, 0, 327669, 2, 0, 262133, 2, 0, 196597, 2, 0, 196598, 2, 0, 262135, 2, 0, 262136, 2, 0, 262137, 2, 0, 262138, 2, 0, 262139, 2, 0, 262140, 2, 0, 262141, 2, 0, 262142, 2, 0, 262143, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 262134, 2, 0, 196599, 2, 0, 131063, 2, 0, 131064, 2, 0, 65528, 2, 0, -8, 2, 0, -7, 2, 0, 196600, 2, 0, 131065, 2, 0, 65529, 2, 0, 65527, 2, 0, 131062, 2, 0, 131061, 2, 0, 65525, 2, 0, -11, 2, 0, -10, 2, 0, -65546, 2, 0, 65526, 2, 0, -131082, 2, 0, -131083, 2, 0, -196619, 2, 0, -65547, 2, 0, -196618, 2, 0, -196617, 2, 0, -131081, 2, 0, -65545, 2, 0, -9, 2, 0, -65544, 2, 0, -131080, 2, 0, -196616, 2, 0, -65543, 2, 0, -131079, 2, 0, -131078, 2, 0, -196614, 2, 0, -196615, 2, 0, 196601, 2, 0, 196602, 2, 0, 131066, 2, 0, 131067, 2, 0, 65531, 2, 0, -5, 2, 0, -65541, 2, 0, -131077, 2, 0, -196613, 2, 0, -65542, 2, 0, -6, 2, 0, 65530, 2, 0, -65540, 2, 0, -131076, 2, 0, -196612, 2, 0, -4, 2, 0, 65532, 2, 0, 131068, 2, 0, 196603, 2, 0, 196604, 2, 0, 196605, 2, 0, 131069, 2, 0, 65533, 2, 0, -3, 2, 0, -65539, 2, 0, -131075, 2, 0, -196611, 2, 0, -196610, 2, 0, -196609, 2, 0, -262144, 2, 0, -262143, 2, 0, -262142, 2, 0, -262141, 2, 0, -262140, 2, 0, -262139, 2, 0, -262137, 2, 0, -196601, 2, 0, -131065, 2, 0, -65529, 2, 0, 7, 2, 0, 65543, 2, 0, 131079, 2, 0, 196615, 2, 0, 196614, 2, 0, 196613, 2, 0, 131077, 2, 0, 131078, 2, 0, 65542, 2, 0, 6, 2, 0, -65530, 2, 0, -131066, 2, 0, -196603, 2, 0, -131067, 2, 0, -65531, 2, 0, 5, 2, 0, 65541, 2, 0, 131076, 2, 0, 65540, 2, 0, 4, 2, 0, -131068, 2, 0, -196604, 2, 0, -196605, 2, 0, -131069, 2, 0, 3, 2, 0, 65539, 2, 0, 131075, 2, 0, 65538, 2, 0, 2, 2, 0, -131070, 2, 0, -196606, 2, 0, 131074, 2, 0, 131073, 2, 0, 65537, 2, 0, 1, 2, 0, -65535, 2, 0, -131071, 2, 0, -196607, 2, 0, -65536, 2, 0, 0, 2, 0, 65536, 2, 0, 131072, 2, 0, -131072, 2, 0, -196608, 2, 0, -65537, 2, 0, -1, 2, 0, 65535, 2, 0, 131071, 2, 0, 196607, 2, 0, -131073, 2, 0, -65538, 2, 0, -2, 2, 0, 65534, 2, 0, 131070, 2, 0, 196606, 2, 0, -131074, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -196602, 2, 0, -262138, 2, 0, 131059, 2, 0, 196595, 2, 0, -131085, 2, 0, -65549, 2, 0, -13, 2, 0, 65523, 2, 0, 262131, 2, 0, 327667, 2, 0, 393203, 2, 0, 458739, 2, 0, 524275, 2, 0, 524276, 2, 0, 524277, 2, 0, 524278, 2, 0, 524279, 2, 0, 524280, 2, 0, 524281, 2, 0, 524282, 2, 0, 524283, 2, 0, 524284, 2, 0, 524285, 2, 0, 524286, 2, 0, 524287, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 393225, 2, 0, 327689, 2, 0, 262153, 2, 0, 196617, 2, 0, 131081, 2, 0, 65545, 2, 0, 9, 2, 0, -65527, 2, 0, -131063, 2, 0, -196599, 2, 0, -262135, 2, 0, -262134, 2, 0, -327670, 2, 0, -393206, 2, 0, -393207, 2, 0, -393208, 2, 0, -393209, 2, 0, -393210, 2, 0, -393211, 2, 0, -393212, 2, 0, -393213, 2, 0, -393214, 2, 0, -393215, 2, 0, -393216, 2, 0, -327681, 2, 0, -327682, 2, 0, -327683, 2, 0, -327684, 2, 0, -327685, 2, 0, -327686, 2, 0, -327687, 2, 0, -327688, 2, 0, -327689, 2, 0, -327690, 2, 0, -327691, 2, 0, -327692, 2, 0, -327693, 2, 0, -262157, 2, 0, -196621, 2, 0, -327671, 2, 0)

[node name="Walls" type="TileMap" parent="."]
position = Vector2(45, -32)
tile_set = SubResource("TileSet_2igs3")
format = 2
layer_0/tile_data = PackedInt32Array(-196619, 65537, 1, -262155, 65537, 1, -262154, 131073, 3, -262153, 131073, 3, -262152, 131073, 3, -262151, 131073, 3, -262150, 65537, 1, -196613, 65537, 1, -196612, 65537, 1, -196611, 65537, 1, -196610, 65537, 1, -196609, 65537, 1, -262144, 65537, 1, -262143, 65537, 1, -262142, 65537, 1, -262141, 65537, 1, -327677, 65537, 1, -327676, 65537, 1, -327675, 65537, 1, -327674, 65537, 1, -327673, 65537, 1, -327678, 65537, 1, -327679, 65537, 1, -327680, 65537, 1, -262145, 65537, 1, -262146, 65537, 1, -262147, 65537, 1, -262148, 65537, 1, -262149, 65537, 1, -327672, 65537, 1, -262136, 65537, 1, -196600, 65537, 1, -131064, 65537, 1, -65528, 65537, 1, 8, 65537, 1, 65544, 65537, 1, 131080, 65537, 1, 196616, 65537, 1, 262152, 65537, 1, 327688, 65537, 1, 393224, 131073, 2, 393223, 131073, 2, 393222, 131073, 2, 393221, 131073, 2, 393220, 131073, 2, 393219, 131073, 2, 393218, 131073, 2, 393217, 131073, 2, 393216, 131073, 2, 458751, 131073, 2, 458750, 131073, 2, 458749, 131073, 2, 458748, 131073, 2, 458745, 131073, 2, 458744, 131073, 2, 458743, 131073, 2, 458742, 131073, 2, 458746, 131073, 2, 458747, 131073, 2, 458741, 131073, 2, 458740, 65537, 2, 393205, 65537, 1, 327669, 65537, 1, 262133, 65537, 1, 196597, 65537, 1, 131061, 65537, 1, 65525, 65537, 1, -11, 65537, 1, -65547, 65537, 1, -131083, 65537, 1, -131084, 65537, 1, -196620, 65537, 1, -262156, 65537, 1, -65548, 65537, 1, -12, 65537, 1, 65524, 65537, 1, 131060, 65537, 1, 196596, 65537, 1, 262132, 65537, 1, 327668, 65537, 1, 393204, 65537, 1, 393207, 65537, 1, 393208, 65537, 1, 327687, 65537, 1, 262151, 65537, 1, 196615, 65537, 1, 131079, 65537, 1, 65543, 65537, 1, 7, 65537, 1, -65529, 65537, 1, -131065, 65537, 1, -196601, 65537, 1, -262137, 65537, 1, -262139, 65537, 1, -262140, 65537, 1, -196614, 65537, 1, -196608, 65537, 1, -196607, 65537, 1, -196606, 65537, 1, 327672, 65537, 1, 262136, 65537, 1, 196600, 65537, 1, 131064, 65537, 1, 65528, 65537, 1, -65544, 65537, 1, -131080, 65537, 1, 327671, 65537, 1, 262135, 65537, 1, 196599, 65537, 1, 65527, 131073, 3, -8, 65537, 1, -131081, 65537, 1, -65545, 65537, 1, -131078, 65537, 1, -65542, 65537, 1, -9, 65537, 1, -6, 65537, 1, 65530, 131073, 3, 131067, 65537, 1, 65531, 65537, 1, -5, 65537, 1, -65541, 65537, 1, -131077, 65537, 1, 196603, 65537, 1, 196602, 65537, 1, 262138, 65537, 1, 327674, 131073, 3, 262139, 65537, 1, 327675, 131073, 3, -131076, 65537, 2, -131075, 65537, 1, -131074, 65537, 1, -131073, 65537, 1, -196605, 65537, 1, -196604, 65537, 2, -196603, 65537, 1, -131067, 65537, 1, -65531, 65537, 1, 5, 65537, 1, 65541, 65537, 1, 131077, 65537, 1, 196613, 65537, 2, 262149, 65537, 3, -65540, 65537, 3, -65539, 131073, 3, -65538, 131073, 3, -65537, 131073, 3, -131072, 131073, 3, -131071, 131073, 3, -131070, 131073, 3, -131069, 131073, 3, -131068, 65537, 3, 524276, 65537, 3, 393225, 65537, 2, 458761, 65537, 3, 524277, 131073, 3, 524278, 131073, 3, 524279, 131073, 3, 524280, 131073, 3, 524281, 131073, 3, 524282, 131073, 3, 524283, 131073, 3, 524284, 131073, 3, 524285, 131073, 3, 524286, 131073, 3, 524287, 131073, 3, 458752, 131073, 3, 458753, 131073, 3, 458754, 131073, 3, 458755, 131073, 3, 458756, 131073, 3, 458757, 131073, 3, 458758, 131073, 3, 458759, 131073, 3, 458760, 131073, 3, -327692, 65537, 2, -327690, 131073, 2, -327689, 131073, 2, -393209, 131073, 2, -393210, 131073, 2, -393211, 131073, 2, -393212, 131073, 2, -393213, 131073, 2, -393214, 131073, 2, -393215, 131073, 2, -393216, 131073, 2, -327681, 131073, 2, -327682, 131073, 2, -327683, 131073, 2, -327684, 131073, 2, -327685, 131073, 2, -327686, 131073, 2, -327687, 131073, 2, -327688, 131073, 2, -393208, 131073, 2, -327691, 131073, 2, -393207, 65537, 2, -327671, 65537, 1, -262135, 65537, 1, -196599, 65537, 1, -131063, 65537, 1, -65527, 65537, 1, 9, 65537, 1, 65545, 65537, 1, 131081, 65537, 1, 196617, 65537, 1, 262153, 65537, 1, 327689, 65537, 1)

[node name="Stairs" type="TileMap" parent="."]
position = Vector2(45, -32)
tile_set = SubResource("TileSet_l28v6")
format = 2
layer_0/tile_data = PackedInt32Array(-196619, 65537, 1, -262155, 65537, 1, -262154, 131073, 3, -262153, 131073, 3, -262152, 131073, 3, -262151, 131073, 3, -262150, 65537, 1, -196613, 65537, 1, -196612, 65537, 1, -196611, 65537, 1, -196610, 65537, 1, -196609, 65537, 1, -262144, 65537, 1, -262143, 65537, 1, -262142, 65537, 1, -262141, 65537, 1, -327677, 65537, 1, -327676, 65537, 1, -327675, 65537, 1, -327674, 65537, 1, -327673, 65537, 1, -327678, 65537, 1, -327679, 65537, 1, -327680, 65537, 1, -262145, 65537, 1, -262146, 65537, 1, -262147, 65537, 1, -262148, 65537, 1, -262149, 65537, 1, -327672, 65537, 1, -262136, 65537, 1, -196600, 65537, 1, -131064, 65537, 1, -65528, 65537, 1, 8, 65537, 1, 65544, 65537, 1, 131080, 65537, 1, 196616, 65537, 1, 262152, 65537, 1, 327688, 65537, 1, 393224, 131073, 2, 393223, 131073, 2, 393222, 131073, 2, 393221, 131073, 2, 393220, 131073, 2, 393219, 131073, 2, 393218, 131073, 2, 393217, 131073, 2, 393216, 131073, 2, 458751, 131073, 2, 458750, 131073, 2, 458749, 131073, 2, 458748, 131073, 2, 458745, 131073, 2, 458744, 131073, 2, 458743, 131073, 2, 458742, 131073, 2, 458746, 131073, 2, 458747, 131073, 2, 458741, 131073, 2, 458740, 65537, 2, 393205, 65537, 1, 327669, 65537, 1, 262133, 65537, 1, 196597, 65537, 1, 131061, 65537, 1, 65525, 65537, 1, -11, 65537, 1, -65547, 65537, 1, -131083, 65537, 1, -131084, 65537, 1, -196620, 65537, 1, -262156, 65537, 1, -65548, 65537, 1, -12, 65537, 1, 65524, 65537, 1, 131060, 65537, 1, 196596, 65537, 1, 262132, 65537, 1, 327668, 65537, 1, 393204, 65537, 1, 393207, 65537, 1, 393208, 65537, 1, 327687, 65537, 1, 262151, 65537, 1, 196615, 65537, 1, 131079, 65537, 1, 65543, 65537, 1, 7, 65537, 1, -65529, 65537, 1, -131065, 65537, 1, -196601, 65537, 1, -262137, 65537, 1, -262139, 65537, 1, -262140, 65537, 1, -196614, 65537, 1, -196608, 65537, 1, -196607, 65537, 1, -196606, 65537, 1, 327672, 65537, 1, 262136, 65537, 1, 196600, 65537, 1, 131064, 65537, 1, 65528, 65537, 1, -65544, 65537, 1, -131080, 65537, 1, 327671, 65537, 1, 262135, 65537, 1, 196599, 65537, 1, 65527, 131073, 3, -8, 65537, 1, -131081, 65537, 1, -65545, 65537, 1, -131078, 65537, 1, -65542, 65537, 1, -9, 65537, 1, -6, 65537, 1, 65530, 131073, 3, 131067, 65537, 1, 65531, 65537, 1, -5, 65537, 1, -65541, 65537, 1, -131077, 65537, 1, 196603, 65537, 1, 196602, 65537, 1, 262138, 65537, 1, 327674, 131073, 3, 262139, 65537, 1, 327675, 131073, 3, -131076, 65537, 2, -131075, 65537, 1, -131074, 65537, 1, -131073, 65537, 1, -196605, 65537, 1, -196604, 65537, 2, -196603, 65537, 1, -131067, 65537, 1, -65531, 65537, 1, 5, 65537, 1, 65541, 65537, 1, 131077, 65537, 1, 196613, 65537, 2, 262149, 65537, 3, -65540, 65537, 3, -65539, 131073, 3, -65538, 131073, 3, -65537, 131073, 3, -131072, 131073, 3, -131071, 131073, 3, -131070, 131073, 3, -131069, 131073, 3, -131068, 65537, 3, 524276, 65537, 3, 393225, 65537, 2, 458761, 65537, 3, 524277, 131073, 3, 524278, 131073, 3, 524279, 131073, 3, 524280, 131073, 3, 524281, 131073, 3, 524282, 131073, 3, 524283, 131073, 3, 524284, 131073, 3, 524285, 131073, 3, 524286, 131073, 3, 524287, 131073, 3, 458752, 131073, 3, 458753, 131073, 3, 458754, 131073, 3, 458755, 131073, 3, 458756, 131073, 3, 458757, 131073, 3, 458758, 131073, 3, 458759, 131073, 3, 458760, 131073, 3, -327692, 65537, 2, -327690, 131073, 2, -327689, 131073, 2, -393209, 131073, 2, -393210, 131073, 2, -393211, 131073, 2, -393212, 131073, 2, -393213, 131073, 2, -393214, 131073, 2, -393215, 131073, 2, -393216, 131073, 2, -327681, 131073, 2, -327682, 131073, 2, -327683, 131073, 2, -327684, 131073, 2, -327685, 131073, 2, -327686, 131073, 2, -327687, 131073, 2, -327688, 131073, 2, -393208, 131073, 2, -327691, 131073, 2, -393207, 65537, 1, -327671, 65537, 1, -262135, 65537, 1, -196599, 65537, 1, -131063, 65537, 1, -65527, 65537, 1, 9, 65537, 1, 65545, 65537, 1, 131081, 65537, 1, 196617, 65537, 1, 262153, 65537, 1, 327689, 65537, 1, -262138, 1, 0, -196602, 1, 0)

[node name="Area2D" type="Area2D" parent="Stairs"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stairs/Area2D"]
position = Vector2(208.5, -112.5)
shape = SubResource("RectangleShape2D_umb4c")

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2(13, 0)
zoom = Vector2(0.455, 0.4)

[node name="Player" parent="." instance=ExtResource("1_u38l8")]
position = Vector2(-261, 145)

[node name="Chalice" parent="." instance=ExtResource("2_m6omq")]
position = Vector2(68, 17)

[node name="Enemy" parent="." instance=ExtResource("3_7604f")]
position = Vector2(-226, 14)
invert_start = false

[node name="Enemy2" parent="." instance=ExtResource("3_7604f")]
position = Vector2(-163, 141)
horizontal = false
SPEED = 100.0

[node name="Enemy3" parent="." instance=ExtResource("3_7604f")]
position = Vector2(142, 62)

[node name="Enemy4" parent="." instance=ExtResource("3_7604f")]
position = Vector2(16, 94)
horizontal = false

[node name="Enemy5" parent="." instance=ExtResource("3_7604f")]
position = Vector2(142, -18)
horizontal = false

[node name="Enemy6" parent="." instance=ExtResource("3_7604f")]
position = Vector2(-63, 11)
invert_start = false

[node name="Enemy7" parent="." instance=ExtResource("3_7604f")]
position = Vector2(125, 142)
SPEED = 100.0

[node name="ResumeButton" type="Button" parent="."]
offset_left = -63.0
offset_top = -24.0
offset_right = 3.0
scale = Vector2(1.915, 1.915)
text = "Start?"

[node name="DiedLabel" type="Label" parent="."]
visible = false
offset_left = -74.0
offset_top = -17.0
offset_right = -1.0
offset_bottom = -1.00001
scale = Vector2(2.03, 2.03)
text = "You Died"

[node name="ChalliceLabel" type="Label" parent="."]
visible = false
offset_left = -74.0
offset_top = 36.0
offset_right = 184.0
offset_bottom = 52.0
text = "You got the chalice, Escape!"

[node name="YouWinLabel" type="Label" parent="."]
visible = false
offset_left = 143.0
offset_top = -67.0
offset_right = 336.0
offset_bottom = -51.0
text = "You Escaped... For Now"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_e2cug")
volume_db = -10.0
autoplay = true

[connection signal="body_entered" from="Stairs/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="challice_picked_up" from="Chalice" to="." method="_on_chalice_challice_picked_up"]
[connection signal="pressed" from="ResumeButton" to="." method="_on_button_pressed"]
